Stop using deprecated URL constructors
Changes tests only.